refactor(EIDOMNI-286): Static code analysis findings